--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>Johnny Tran<br />
 						Portfolio</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>Data Analyst and Data Science Project by <a href="https://www.linkedin.com/in/johnny-tran-241617120/">@Johnnytran</a>
+			
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -54,10 +54,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql">Data Cleaning<br />
-									In Python</a></h2>
-									<p>In this project we are going to clean and malnipulate data in Python.</p>
+									<span class="date">August 09, 2023</span>
+									<h2><a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql">Dash Board<br />
+									In Power BI</a></h2>
+									<p>In this project we are going to prepare a project in Power BI.</p>
 								</header>
 								<a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="image main"><img src="images/sport_analyst.jpeg" alt="" /></a>
 								<ul class="actions special">
@@ -86,9 +86,9 @@
 											Power BI</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/power_BI.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project we are going to create a Dashboard on the Data Professional Survey Breakdown.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://app.powerbi.com/groups/me/reports/166341ca-bd8b-4bf3-9e90-f864602ab562?ctid=f2cd0b0f-2016-4209-bd44-bbe39514eab5&pbi_source=linkShare" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
